--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ fastapi
 uvicorn[standard]
 proxmoxer
 pydantic
-python-dotenv  # (可选, 用于从 .env 文件加载配置)
+python-dotenv
 jinja2
-python-multipart # (如果需要表单处理)
+python-multipart
